--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -1,7 +1,7 @@
 name: launch_counter_frontend
-description: "A new Flutter project."
+description: "Count your launch times with ease."
 
-version: 1.0.0+1
+version: 0.0.1
 
 environment:
   sdk: ^3.8.1
@@ -23,5 +23,3 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  assets:
-    - assets/rocket_icon.png
