build(frontend):修改了安卓端的包名，添加了正式版签名并提供范例

--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.admirelink.launchcounter">
     <application
         android:label="发射计数器"
         android:name="${applicationName}"
